# niixtracer

./: CMakeLists.txt
scenes/: 0.mcpt.scn  0.rt.scn  0.scn  0.spectral_mcpt.scn  0_pbr.scn  0_pbr_d65.scn  1.rt.scn  1.scn  highres_small.scn  small.scn  test.mcpt.scn  test.no_fluo.scn  test.scn
scenes/materials/: diamond.scn  glass.scn  matte.scn  metal.scn  plastic.scn  translucent.scn
src/: main.cpp
src/Camera/: camera.cpp  camera.hpp
src/Image/: color.cpp  color.hpp  color.inl  image.cpp  image.hpp
src/Light/: light.cpp  light.hpp
src/Material/: brdf.cpp  brdf.hpp  dielectric.cpp  dielectric.hpp  fluorescence.cpp  fluorescence.hpp  glass.cpp  glass.hpp  lambertian_model.cpp  lambertian_model.hpp  material.cpp  material.hpp  material_brdf.cpp  material_brdf.hpp  material_pbr.cpp  material_pbr.hpp  matte.cpp  matte.hpp  metal.cpp  metal.hpp  mirror.cpp  mirror.hpp  participating_media.hpp
src/Math/: math.hpp  math.inl
src/Object/: object.cpp  object.hpp
src/Object/Camera/: camera.cpp  camera.hpp
src/Object/Light/: light.cpp  light.hpp
src/Object/Material/: material.cpp  material.hpp
src/Object/Shape/: plane.cpp  plane.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/Raytracer/: intersection.cpp  intersection.hpp  pathtracer.cpp  pathtracer.hpp  ray.cpp  ray.hpp  raytracer.cpp  raytracer.hpp  renderer.cpp  renderer.hpp  spectral_pathtracer.cpp  spectral_pathtracer.hpp  spectrum.cpp  spectrum.hpp  spectrum.inl
src/Scene/: scene.cpp  scene.hpp  scene_examples.inl
src/Shapes/: object.cpp  object.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
src/Utils/: color_matching.cpp  color_matching.hpp  sampler.cpp  sampler.hpp  save.cpp  save.hpp  serializer.cpp  serializer.hpp  utils.hpp
